[gd_scene load_steps=5 format=3 uid="uid://befyjavmkf8n2"]

[ext_resource type="Script" uid="uid://b0x8twtheq5q6" path="res://Scenes/big_bullet.gd" id="1_cukqg"]
[ext_resource type="Texture2D" uid="uid://b5leus2rgc4kb" path="res://tank_bullet3.png" id="1_ridgn"]
[ext_resource type="PackedScene" uid="uid://bxm52f32mesfo" path="res://스테이지1/explosion.tscn" id="2_6vwr0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6vwr0"]
size = Vector2(122, 79.5)

[node name="BigBullet" type="RigidBody2D"]
position = Vector2(4, 0)
collision_layer = 16
collision_mask = 3
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_cukqg")
explosion_scene = ExtResource("2_6vwr0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_ridgn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_6vwr0")

[node name="CollisionEnableTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="CollisionEnableTimer" to="." method="_on_collision_enable_timer_timeout"]
